force-app/main/default/objects/BasiqEntityAffordability_v2__c/BasiqEntityAffordability_v2__c.object-meta.xml
<CustomObject>
    <label>Basiq Entity Affordability</label>
    <nameField>
        <label>Basiq Entity Affordability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Basiq Entity Affordabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>