force-app/main/default/objects/BasiqEntityAffordability_v2__c/fields/AvgRegularIncome3Months__c.field-meta.xml
<CustomField>
    <fullName>AvgRegularIncome3Months__c</fullName>
    <label>Avarage Regular Income Over 3 Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>