force-app/main/default/objects/BasiqEntityAffordability_v2__c/fields/BasiqUserId__c.field-meta.xml
<CustomField>
    <fullName>BasiqUserId__c</fullName>
    <label>Basiq User Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>