force-app/main/default/objects/BasiqEntityAffordability_v2__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Basiq Entity Affordabilities</relationshipLabel>
    <relationshipName>Basiq_Entity_Affordabilities</relationshipName>
    <type>Lookup</type>
</CustomField>