force-app/main/default/objects/BasiqEntityAffordability_v2__c/fields/CoverageDays__c.field-meta.xml
<CustomField>
    <fullName>CoverageDays__c</fullName>
    <label>Coverage Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>