force-app/main/default/objects/BasiqEntityAffordability_v2__c/fields/GeneratedDate__c.field-meta.xml
<CustomField>
    <fullName>GeneratedDate__c</fullName>
    <label>Generated Date</label>
    <type>DateTime</type>
</CustomField>