force-app/main/default/objects/BasiqEntityAffordability_v2__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Basiq Entity Affordabilities</relationshipLabel>
    <relationshipName>Basiq_Entity_Affordabilities</relationshipName>
    <type>Lookup</type>
</CustomField>