force-app/main/default/objects/BasiqEntityAffordability_v2__c/fields/NetPosition__c.field-meta.xml
<CustomField>
    <fullName>NetPosition__c</fullName>
    <label>Net Position</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>